--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,13 +1,14 @@
 <div class="container">
   <h1><%= @list.name %></h1>
   <ul class="list-group">
-    <% @list.movies.each do |movie| %>
+    <% @list.bookmarks.each do |bookmark| %>
       <li class="list-group-item d-flex justify-content-between align-items-venter">
-        <%= movie.title %>
-        <span class="badge badge-primary badge-pill"><%= movie.rating %></span>
+        <%= bookmark.movie.title %>
+        <span class="badge badge-primary badge-pill"><%= bookmark.movie.rating %></span>
+        <%= link_to  "Remove", bookmark_path(bookmark), method: :delete, data: { confirm: 'Are you sure?' }%>
       </li>
     <% end %>
   </ul>
   <%= link_to 'Back to all lists', lists_path %>
-  <%= link_to 'Add a bookmark', new_list_bookmark_path(@list) %>
+  <%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %>
 </div>
