--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,8 +1,13 @@
-<div class="container">
-  <h2>Add list</h2>
-  <%= simple_form_for [@list] do |f| %>
-    <%= f.input :name %>
-    <%= f.submit "Add list", class: "btn btn-primary" %>
-  <% end %>
-  <%= link_to "Back to all lists", lists_path %>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-6 offset-lg-3">
+      <div class="bg-white rounded p-3 shadow">
+        <h3>Create a new list</h3>
+        <%= simple_form_for @list do |f| %>
+          <%= f.input :name, placeholder: 'Drama' %>
+          <%= f.submit class: 'btn btn-flat' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
