--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -15,6 +15,7 @@
         <%= link_to list_path(list), class:'text-decoration-none' do %>
           <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
             <%= list.name %>
+            <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
           </div>
         <% end %>
       </div>
